Undo unnecessary file-rename during pseudonymization and clearer manage instanceFile access